--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -93,8 +93,8 @@
         <h4 class="content__gh-title">Gists</h4>
         <div class="content__gh-list">
             <div class="content__gh-list-item">
-                <img src="https://api.murselsen.com//photos/IMG_20231015_135507.jpg" alt="Repo Name" width="500"
-                    height="150" style="object-fit: cover;" class="content__gh-list-item__img" />
+                <img src="https://api.murselsen.com//photos/IMG_20231015_135507.jpg" alt="Repo Name"
+                    class="content__gh-list-item__img" />
                 <div class="content__gh-list-item__main">
                     <h3 class="content__gh-list-item__title">Repo Name</h3>
                     <p class="content__gh-list-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -102,12 +102,19 @@
                         voluptatum, unde, omnis
                         voluptatibus
                         esse suscipit.</p>
-                    <ul class="content__gh-list-item__language">
-                        <li>Javascript</li>
-                        <li>Css</li>
-                        <li>Html</li>
-                        <li>Php</li>
-                    </ul>
+
+                    <div class="content__gh-list-item__main-alt">
+                        <ul class="content__gh-list-item__tags">
+                            <li>Javascript</li>
+                            <li>Css</li>
+                            <li>Html</li>
+                            <li>Php</li>
+                        </ul>
+                        <span class="content__gh-list-item__languages">
+                            <b>Javascript</b>
+                            <i class="ri-code-box-fill"></i>
+                        </span>
+                    </div>
                 </div>
                 <div class="content__gh-list-item__footer">
                     <ul class="Contributors">
@@ -134,48 +141,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="content__gh-list-item">
-                <img src="https://api.murselsen.com//photos/IMG_20231015_135507.jpg" alt="Repo Name" width="500"
-                    height="150" style="object-fit: cover;" class="content__gh-list-item__img" />
-                <div class="content__gh-list-item__main">
-                    <h3 class="content__gh-list-item__title">Repo Name</h3>
-                    <p class="content__gh-list-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Quisquam,
-                        voluptatum, unde, omnis
-                        voluptatibus
-                        esse suscipit.</p>
-                    <ul class="content__gh-list-item__language">
-                        <li>Javascript</li>
-                        <li>Css</li>
-                        <li>Html</li>
-                        <li>Php</li>
-                    </ul>
-                </div>
-                <div class="content__gh-list-item__footer">
-                    <ul class="Contributors">
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
-                            </a>
-                        </li>
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
-                            </a>
-                        </li>
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
-                            </a>
-                        </li>
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
