--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -118,27 +118,58 @@
                 </div>
                 <div class="content__gh-list-item__footer">
                     <ul class="Contributors">
+
                         <li class="Contributors-item">
                             <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
+                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
+                                    class="Contributors-link__img" />
+                                <span class="Contributors-link__title">Username</span>
+                            </a>
+                        </li>
+
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
+                                    class="Contributors-link__img" />
+                                <span class="Contributors-link__title">Username</span>
                             </a>
                         </li>
                         <li class="Contributors-item">
                             <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
+                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
+                                    class="Contributors-link__img" />
+                                <span class="Contributors-link__title">Username</span>
                             </a>
                         </li>
                         <li class="Contributors-item">
                             <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
+                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
+                                    class="Contributors-link__img" />
+                                <span class="Contributors-link__title">Username</span>
                             </a>
                         </li>
                         <li class="Contributors-item">
                             <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="#" alt="Username" class="Contributors-link__img" />
+                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
+                                    class="Contributors-link__img" />
+                                <span class="Contributors-link__title">Username</span>
                             </a>
                         </li>
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
+                                    class="Contributors-link__img" />
+                                <span class="Contributors-link__title">Username</span>
+                            </a>
+                        </li>
+
+
                     </ul>
+                    <div class="Controllers">
+                        <a href="#" class="Controllers-link"><i></i></a>
+                        <a href="#" class="Controllers-link"><i></i></a>
+                        <a href="#" class="Controllers-link"><i></i></a>
+                    </div>
                 </div>
             </div>
 
