--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -123,52 +123,22 @@
                             <a href="#" class="Contributors-link" title="Username" target="_blank">
                                 <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
                                     class="Contributors-link__img" />
-                                <span class="Contributors-link__title">Username</span>
-                            </a>
-                        </li>
-
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
-                                    class="Contributors-link__img" />
-                                <span class="Contributors-link__title">Username</span>
-                            </a>
-                        </li>
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
-                                    class="Contributors-link__img" />
-                                <span class="Contributors-link__title">Username</span>
-                            </a>
-                        </li>
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
-                                    class="Contributors-link__img" />
-                                <span class="Contributors-link__title">Username</span>
-                            </a>
-                        </li>
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
-                                    class="Contributors-link__img" />
-                                <span class="Contributors-link__title">Username</span>
-                            </a>
-                        </li>
-                        <li class="Contributors-item">
-                            <a href="#" class="Contributors-link" title="Username" target="_blank">
-                                <img src="https://cdn-icons-png.flaticon.com/512/6858/6858463.png" alt="Username"
-                                    class="Contributors-link__img" />
-                                <span class="Contributors-link__title">Username</span>
                             </a>
                         </li>
 
 
                     </ul>
                     <div class="Controllers">
-                        <a href="#" class="Controllers-link"><i></i></a>
-                        <a href="#" class="Controllers-link"><i></i></a>
-                        <a href="#" class="Controllers-link"><i></i></a>
+                        <!-- Releases -->
+                        <a href="#" title="{RepoName} | Github Repository | " class="Controllers-link">
+                            <i class="ri-red-packet-fill"></i>
+                        </a>
+                        <a href="#" title="{RepoName} | Github Repository Releases | " class="Controllers-link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+                        <a href="#" title="{RepoName} | Page Link | " class="Controllers-link">
+                            <i class="ri-window-fill"></i>
+                        </a>
                     </div>
                 </div>
             </div>
