--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -90,8 +90,8 @@
         <p class="content__about-tag">&nbsp;&nbsp;*/</p>
     </div>
     <div class="content__gh">
-        <h4 class="content__gh-title">Gists</h4>
-        <div class="content__gh-list">
+
+        <div class="content__gh-list" id="ghList">
             <div class="content__gh-list-item">
                 <img src="https://api.murselsen.com//photos/IMG_20231015_135507.jpg" alt="Repo Name"
                     class="content__gh-list-item__img" />
