feat: Add About page with sidebar and content components; refactor Home page to use new content structure style: Update App.css for improved layout and responsiveness; enhance Header and Footer components chore: Remove unused Mobile-Main.css and integrate styles into Home.css

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 @media (min-width: 768px) {
   #app {
-    height: calc(100vh - 32px);
+    height: calc(100vh);
     border: 1px solid #314158;
   }
 
