--- a/src/index.css
+++ b/src/index.css
@@ -71,14 +71,14 @@ html {
   background-attachment: fixed;
   background-position: center;
   padding: 16px;
-  user-select: none;
+  /* user-select: none;
   -webkit-user-select: none;
-  -moz-user-select: none;
+  -moz-user-select: none; */
 }
 
 body {
   margin: 0 auto;
-  
+
 }
 
 /*  */
