--- a/src/pages/Home/Css/HomeMedia.module.css
+++ b/src/pages/Home/Css/HomeMedia.module.css
@@ -1,34 +1,22 @@
+.media {
+    display: none;
+}
+
 @media (min-width: 768px) {
-
-
-    .container .content {
-
-        background: transparent;
-        flex-direction: column;
-        padding: 80px;
-        background-position: 10px 10px;
-        justify-content: center;
-        align-items: flex-end;
-    }
-
-    .container .content .content__introduction,
-    .container .content .content__link {
-        width: 80%;
-    }
-
-    .container .media {
+    .media {
         display: flex;
         justify-content: start;
         align-items: center;
     }
 
-    .container .media .profile {
+    .profile {
         width: 800px;
         height: 100%;
         max-height: 750px;
     }
 
-    .container .media .profile .profile__image {
+
+    .profile .profile__image {
         width: 90%;
         max-width: 100%;
         height: 100%;
@@ -42,10 +30,8 @@
         filter: grayscale(0.5);
     }
 
-    .container .media .profile .profile__image:hover {
+    .profile .profile__image:hover {
         filter: grayscale(0);
         box-shadow: 1px -1px 19px 10px var(--color-teal-hover);
     }
-
-
 }
