feat: Enhance layout of ConstCodeText component with flex display and gap

--- a/src/components/ConstCodeText/ConstCodeText.module.css
+++ b/src/components/ConstCodeText/ConstCodeText.module.css
@@ -1,6 +1,8 @@
 .code {
     color: var(--font-body-color);
     font: var(--font-body-sm);
+    display: flex;
+    gap: 7px;
 }
 
 .code .constant {
