--- a/src/pages/Home/Css/HomeContent.module.css
+++ b/src/pages/Home/Css/HomeContent.module.css
@@ -1,39 +1,14 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    background-image: url('/blue-layer.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
-}
-
 .content {
+    width: fit-content;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin: 0 auto;
-    height: 50vh;
+    padding: 50px 24px;
+    height: fit-content;
     gap: 75px;
-    border: 1px solid red;
+    overflow-y: auto;
 }
-
-.media {
-    display: none;
-}
-
-/*   .content {
-
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 75px;
-    padding: 40px;
-    width: 100%
-}
-
- .media {
-    display: none;
-} */
-
 
 .content .content__introduction,
 .content .content__link {
@@ -44,7 +19,8 @@
 
 .content .message {
     font: var(--font-body-lg);
-    color: var(--font-body-color)
+    color: var(--font-body-color);
+    text-transform: capitalize;
 }
 
 .content .content__introduction .username {
@@ -74,21 +50,16 @@
         padding-left: 20px !important;
     }
 }
-
+*/
 @media (min-width: 768px) {
 
 
-     .content {
+    .content {
+        height: 100%;
 
-        background: transparent;
-        flex-direction: column;
-        padding: 80px;
-        background-position: 10px 10px;
-        justify-content: center;
-        align-items: flex-end;
     }
 
-     .content .content__introduction,
+    /*   .content .content__introduction,
      .content .content__link {
         width: 80%;
     }
@@ -122,7 +93,7 @@
      .media .profile .profile__image:hover {
         filter: grayscale(0);
         box-shadow: 1px -1px 19px 10px var(--color-teal-hover);
-    }
+    } */
 
 
-} */
+}
