--- a/src/pages/Home/Css/HomeMedia.module.css
+++ b/src/pages/Home/Css/HomeMedia.module.css
@@ -1,9 +1,12 @@
 .media {
     display: none;
+
 }
 
 @media (min-width: 768px) {
     .media {
+        width: 50%;
+        height: 100%;
         display: flex;
         justify-content: start;
         align-items: center;
