--- a/src/pages/Home/Css/HomeContent.module.css
+++ b/src/pages/Home/Css/HomeContent.module.css
@@ -18,13 +18,13 @@
 }
 
 .content .message {
-    font: var(--font-body-lg);
+    font: var(--font-body-sm);
     color: var(--font-body-color);
     text-transform: capitalize;
 }
 
 .content .content__introduction .username {
-    font: var(--font-heading-h1);
+    font: var(--font-heading-h2);
     color: var(--font-heading-color);
 }
 
@@ -40,17 +40,6 @@
 }
 
 
-/*
-@media (min-width: 768px) and (max-width: 1024px) {
-     {
-        gap: 20px;
-    }
-
-     .content {
-        padding-left: 20px !important;
-    }
-}
-*/
 @media (min-width: 768px) {
 
 
