--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,46 +1,3 @@
-#app main {
-    flex: 2;
-
-}
-
-.container {
-    height: 100%;
-}
-
-
-/* Sidebar */
-.container .sidebar {
-    width: 100%;
-    height: max-content;
-
-}
-
-
-
-
-/* Content */
-.container .content {
-    width: 100%;
-    height: 100%;
-    padding: 24px;
-    margin: 0;
-    gap: 24px;
-}
-
-.content .content__about {
-    color: var(--font-body-color);
-}
-
-.content__about .content__about-tag {
-    display: none;
-}
-
-.content__about .content__about-text {
-    display: inline-block;
-    margin-block: 2px;
-}
-
-
 .content__gh .content__gh-title {
     display: none;
     font: var(--font-heading-h4);
@@ -100,14 +57,8 @@
     align-items: center;
 }
 
-.content__gh-list-item .content__gh-list-item__main .content__gh-list-item__tags li::before {
-    content: "#";
-    display: inline;
-    margin-right: 2px;
 
-}
-
-.content__gh-list-item .content__gh-list-item__main .content__gh-list-item__tags li {
+.content__gh-list-item .content__gh-list-item__main .content__gh-list-item__tags .content__gh-list-item__tag {
     background-color: #45556C;
     cursor: pointer;
     padding: 5px 10px;
@@ -179,74 +130,15 @@
 
 
 @media (min-width: 768px) {
-    .container .sidebar {
-        min-width: calc(128px + 144px);
-        width: max-content;
-        height: 100%;
-        padding-top: 3.5px;
-        border: 1px solid #314158;
-        background-color: var(--background);
-    }
-
-    .container .content {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        gap: 40px;
-    }
 
 
-    .sidebar .sidebar__accordion .sidebar__accordion-item .sidebar__accordion-item__list {
-        display: flex;
-        padding: 12px 24px;
-        flex-direction: column;
-        gap: 8px;
-    }
 
-    .sidebar .sidebar__accordion .sidebar__accordion-item .sidebar__accordion-item__list:where(.active) {
-        display: none;
-    }
 
-    .content .content__about,
-    .content .content__gh {
-        flex: 1;
-        border-width: 0px 1px 0px 1px;
-        border-style: solid;
-        border-color: var(--theme-theme-stroke, #314158);
-        padding: 32px 40px;
 
-    }
 
-    .content .content__gh {
-        display: flex;
-        align-items: center;
-    }
 
-    .content .content__about {
-        color: var(--font-body-color);
-        font: var(--font-body-lg);
-    }
 
-    .content .content__about .content__about-text::before {
-        content: "*";
-        display: inline-block;
-        color: var(--color-slate);
-        margin-inline-end: 16px;
-    }
 
-    .content .content__about .content__about-tag {
-        display: block;
-        color: var(--color-slate);
-    }
-
-    .content .content__about .content__about-text {
-        margin-block: 2.5px;
-        font: var(--font-body-lg);
-        padding-left: 16px;
-    }
 
     .content__gh-list-item .content__gh-list-item__main .content__gh-list-item__main-alt {
         flex-direction: row;
