feat: Refactor AccordionList to accept dynamic data and update About page components with new styles

--- a/src/pages/About/Css/AboutContent.module.css
+++ b/src/pages/About/Css/AboutContent.module.css
@@ -20,6 +20,11 @@
      margin-block: 2px;
  }
 
+ .content__gh .content__ghList {
+     display: flex;
+     flex-direction: column;
+ }
+
 
  @media (min-width: 768px) {
      .about__content {
