feat: Add live build script and update Contributors component styles
- Added a new script "live" in package.json to build and deploy to GitHub Pages.
- Updated Contributors component to use CSS modules for styling.
- Refactored ContributorsItem to accept imageLink prop and improved accessibility.
- Created Contributors.module.css for better styling management.
- Updated Header component menu items for consistency in naming.
- Removed redundant CSS styles from About.css related to Contributors.
- Enhanced AboutContent and GithubItem components with new layout and styling.
- Integrated Contributors component into GithubItem for displaying contributor information.

--- a/src/pages/About/Css/AboutContent.module.css
+++ b/src/pages/About/Css/AboutContent.module.css
@@ -23,7 +23,12 @@
  .content__gh .content__ghList {
      display: flex;
      flex-direction: column;
+     gap: 50px;
+     overflow-y: auto;
+     scrollbar-width: none;
  }
+
+
 
 
  @media (min-width: 768px) {
@@ -50,7 +55,6 @@
 
      .about__content .content__gh {
          display: flex;
-         align-items: center;
      }
 
      .about__content .content__info {
