--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -76,41 +76,17 @@
     gap: 15px;
 }
 
-.content__gh-list-item__footer .Contributors {
-    display: flex;
-    flex: 2;
-    flex-wrap: wrap;
-    list-style: none;
-}
 
-.content__gh-list-item__footer .Contributors .Contributors-item .Contributors-link {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    gap: 12px;
-    padding: 4px 8px;
-    align-items: center;
-    text-decoration: none;
-    cursor: pointer;
-}
 
-.content__gh-list-item__footer .Contributors .Contributors-item .Contributors-link .Contributors-link__img {
-    width: 36px;
-    height: 36px;
-}
 
-.content__gh-list-item__footer .Contributors .Contributors-item .Contributors-link .Contributors-link__title {
-    font: var(--font-body-md);
-    color: var(--font-body-color);
 
-}
 
 .content__gh-list-item__footer .Controllers {
     display: flex;
     gap: 20px;
 }
 
-.content__gh-list-item__footer .Controllers .Controllers-link {
+.content__gh-list-item__footer .Controllers .link {
     padding: 8px 16px;
     background-color: #45556C;
     color: var(--font-body-color);
@@ -120,7 +96,7 @@
     transition: all 0.3s ease-in-out;
 }
 
-.content__gh-list-item__footer .Controllers .Controllers-link:hover {
+.content__gh-list-item__footer .Controllers .link:hover {
     background-color: var(--color-slate-hover);
     font: var(--font-body-lg);
     color: #fff;
