--- a/src/pages/About/Css/GithubItem.module.css
+++ b/src/pages/About/Css/GithubItem.module.css
@@ -32,7 +32,6 @@
 
 .GithubItem .main .mainAlt {
     display: flex;
-    flex-direction: column;
     gap: 16px;
 }
 
@@ -41,14 +40,75 @@
     flex-wrap: wrap;
     gap: 10px;
     list-style-type: none;
-    flex: 2;
+    flex: 1;
     align-items: center;
+
 }
 
 .GithubItem .main .mainAlt .language {
-    width: 100%;
+    width: max-content;
     text-align: right;
+    vertical-align: text-bottom;
+    align-self: self-end;
+}
+
+.GithubItem .footer {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+
+
+}
+
+.Controllers {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    height: max-content;
+
+}
+
+.GithubItem .footer .Controllers .link {
+    padding: 8px 16px;
+    background-color: #45556C;
+    color: var(--font-body-color);
+    font: var(--font-body-md);
+    border-radius: var(--radius-box);
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
+
+.GithubItem .footer .Controllers .link:hover {
+    background-color: var(--color-slate-hover);
+    font: var(--font-body-lg);
+    color: #fff;
 }
 
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+
+    .GithubItem .main .mainAlt {
+        flex-direction: column;
+
+
+    }
+
+    .GithubItem .main .mainAlt .language {
+        width: 100%;
+        text-align: left;
+    }
+
+    .GithubItem .main .mainAlt .tags {
+        height: 100px;
+        overflow-y: scroll;
+
+    }
+
+    .GithubItem .footer {
+        flex-wrap: wrap;
+        gap: 15px;
+    }
+
+
+}
+
