--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,6 +7,7 @@
   /* border: 1px solid #314158; */
 }
 
+/* 
 #app header,
 #app footer {
   flex: 1;
@@ -15,7 +16,7 @@
 
 #app footer {
   max-height: 50px;
-}
+} */
 
 
 .container {
