--- a/src/pages/Home/Css/HomeContent.module.css
+++ b/src/pages/Home/Css/HomeContent.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    padding: 50px 24px;
+    padding: 0;
     height: fit-content;
     gap: 75px;
     overflow-y: auto;
@@ -85,4 +85,10 @@
     } */
 
 
+}
+
+@media (max-width: 767px) {
+    .content{
+        padding: 0 16px;
+    }
 }
